cabal-version:       >=1.10

name:                tonato
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              Santiago Lizardo
maintainer:          santiagolizardo@users.noreply.github.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

executable tonato
  main-is:             Main.hs
  ghc-options:       -Wall
  other-modules: ToNato
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14, containers, split >=0.2.3
  -- hs-source-dirs:
  default-language:    Haskell2010

Test-Suite tonato-testsuite
  Type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:       base >=4.13 && <4.14, containers, split >=0.2.3, QuickCheck
  default-language:    Haskell2010
