cabal-version: 2.2

name:                tonato
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              Santiago Lizardo
maintainer:          santiagolizardo@users.noreply.github.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

common shared-props
  default-language: Haskell2010
  ghc-options:
    -Wall -Weverything

executable tonato
  import: shared-props
  main-is:             Main.hs
  other-modules: ToNato
  -- other-extensions:
  build-depends: base >=4.13, containers, split >=0.2.3
  -- hs-source-dirs:

Test-Suite tonato-testsuite
  import: shared-props
  Type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules: ToNato
  build-depends: base >=4.13, containers, split >=0.2.3, QuickCheck

